Fixed overlapping controls

--- a/src/index.styl
+++ b/src/index.styl
@@ -57,9 +57,10 @@ html
   
   #controlsSettings
     cursor pointer
-    padding 6px 10px 0 14px
+    margin 6px 0px 0 0px
     position: absolute
-    right: 34px
+    right: 24px
+    width: 40px
     img
       height 20px
       width 20px
@@ -73,13 +74,14 @@ html
         display none
 
   #controlsFullscreen.inFullscreen
-      padding 0px 10px 0 14px
+      margin 0px 0px 0 0px
 
   #controlsFullscreen
     cursor pointer
-    padding 6px 10px 0 14px
+    margin 6px 0px 0 0px
     position: absolute
-    right: 2px
+    right: -4px
+    width: 40px
     svg
       fill: white
       height 26px
@@ -87,9 +89,10 @@ html
 
   #controlsCamera
     cursor pointer
-    padding 6px 10px 0 14px
+    margin 6px 0px 0 0px
     position: absolute
-    right: 60px
+    right: 58px
+    width: 40px
     img
       height 30px
       width 26px  
